Defined box sizing as universal

--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -371,8 +371,10 @@
     --section-title-margin: 0;
     --section-title-color: var(--color-black)
 }
-html {
+* {
     box-sizing: content-box;
+}
+html {
     scroll-behavior: smooth;
     font-size: 62.5%;
 }
