using content box

--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -372,7 +372,7 @@
     --section-title-color: var(--color-black)
 }
 * {
-    box-sizing: border-box;
+    box-sizing: content-box;
 }
 html {
     scroll-behavior: smooth;
