Added box sizing in normalize css

--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -7,7 +7,9 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-
+* {
+    box-sizing: border-box;
+}
  html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
@@ -373,7 +375,6 @@
 }
 
 html {
-    box-sizing: content-box;
     scroll-behavior: smooth;
     font-size: 62.5%;
 }
