Selecting children of element having 'nav' as a parent element

--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -474,23 +474,24 @@
     text-align: center;
   }
 
-nav[class="nav-item"] {
+  .nav [class="nav-item"] {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
     letter-spacing: var(--nav-item-letter-spacing);
     display: var(--nav-item-display);
     margin: var(--nav-item-margin);
-}
+  }
 
-nav[class="nav-link"] {
+  .nav [class="nav-link"] {
     display: block;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
     padding-right: 1rem;
-}
+  }
 
-nav[class="nav-link"]:hover {
+
+.nav [class="nav-link"]:hover {
     color: var(--nav-item-link-hover);
 }
