--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -474,14 +474,11 @@
     text-align: center;
   }
 
-.nav [class="nav-item"] {
-    font-family: var(--nav-item-font-family);
-    font-weight: var(--nav-item-font-weight);
-    font-size: var(--nav-item-font-size);
-    letter-spacing: var(--nav-item-letter-spacing);
-    display: var(--nav-item-display);
-    margin: var(--nav-item-margin);
-  }
+
+.nav [class="nav-link"] {
+    display: block;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+}
 
 
 .nav [class="nav-link"]:hover {
