--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -473,7 +473,7 @@
     list-style: none;
     text-align: center;
   }
-.nav [class="nav-item"] {
+[class="nav-item"] {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
@@ -482,12 +482,12 @@
     margin: var(--nav-item-margin);
 }
 
-.nav [class="nav-link"] {
+[class="nav-link"] {
     display: block;
     padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
 
-.nav [class="nav-link"]:hover {
+[class="nav-link"]:hover {
     color: var(--nav-item-link-hover);
 }
