--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -485,13 +485,9 @@
 
 .nav .nav-link {
     display: block;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
-
-.nav .nav-link:hover {
+.nav-link:hover {
     color: var(--nav-item-link-hover);
 }
