Removing code for testing

--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -470,7 +470,7 @@
 .nav {
     margin: 0;
     padding: 0;
-    
+    list-style: none;
     text-align: center;
   }
 
@@ -489,5 +489,5 @@
 }
 
 .nav .nav-link:hover {
-    color: var(--nav-item-link-hover);
+    
 }
