--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -501,7 +501,7 @@
     list-style: none;
   }
   .col-1-3 {
-    width: 0.333em;
+    width: 0.3em;
     float: left;
     padding: 0.5rem;
   }
@@ -516,5 +516,5 @@
     color: var(--text-color);
   }
   ul .footer {
-    text-align: right;
+    text-align: left;
   }
