--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -501,12 +501,12 @@
     list-style: none;
   }
   .col-1-3 {
-    
+    width: 33.33%;
     float: left;
     padding: 0.5rem;
   }
   .col-1-2 {
-    width: 0.5em;
+    width: 50%;
     float: left;
     padding: 0.5rem;
   }
