--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -497,7 +497,7 @@
 
   ul .row {
     margin: 0;
-    
+    padding: 0;
     list-style: none;
   }
   .col-1-3 {
@@ -511,7 +511,7 @@
     padding: 0.5rem;
   }
   .footer-copyright {
-    margin: 0;
+    
     font-size: var(--font-size-small);
     color: var(--text-color);
   }
