--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -515,6 +515,6 @@
     font-size: var(--font-size-small);
     color: var(--text-color);
   }
-  ul .footer {
+  .footer ul {
     text-align: right;
   }
