--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -511,7 +511,7 @@
     padding: 0.5rem;
   }
   .footer-copyright {
-    
+    margin: 0;
     font-size: var(--font-size-small);
     color: var(--text-color);
   }
