--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -496,8 +496,8 @@
   }
 
   ul[class="row"] {
-    
-    padding: 0;
+    margin: 0 0;
+    padding: 0 0;
     list-style: none;
   }
   .col-1-3 {
