Using clear property

--- a/CSS_advanced/styles/20-style.css
+++ b/CSS_advanced/styles/20-style.css
@@ -519,9 +519,8 @@
     text-align: right;
   }
 
-  .row::after {
+  .row::after{
     content: none;
     display: table;
-    float: none;
-    
+    clear: both;
   }
