--- a/CSS_advanced/styles/21-style.css
+++ b/CSS_advanced/styles/21-style.css
@@ -529,7 +529,11 @@
     padding: 0.5rem;
   }
 
-  [class="col-1-3"][class="col-1-2"] {
+  [class="col-1-3"] {
+    float: none;
+    padding: none;
+  }
+  [class="col-1-2"] {
     float: none;
     padding: none;
   }
