--- a/CSS_advanced/styles/21-style.css
+++ b/CSS_advanced/styles/21-style.css
@@ -528,12 +528,10 @@
     float: left;
     padding: 0.5rem;
   }
-
+  
   [class="col-1-3"] {
-    float: none;
-    padding: none;
+    all: unset;
   }
   [class="col-1-2"] {
-    float: none;
-    padding: none;
+    all: unset;
   }
