styled data-section-theme=dark

--- a/CSS_advanced/styles/22-style.css
+++ b/CSS_advanced/styles/22-style.css
@@ -525,5 +525,6 @@
     padding: 0.5rem;
   }
   [data-section-theme="dark"] {
+    color: var(--color-white);
     background-color: var(--color-black);
   }
