--- a/CSS_advanced/styles/22-style.css
+++ b/CSS_advanced/styles/22-style.css
@@ -524,7 +524,8 @@
     float: left;
     padding: 0.5rem;
   }
-  [data-section-theme=“dark”] {
+
+  [data-section-theme="dark"] {
     --text-color: var(--color-white);
     --section-title-color: var(--color-white);
     background-color: var(--color-black);
