--- a/CSS_advanced/styles/24-style.css
+++ b/CSS_advanced/styles/24-style.css
@@ -549,7 +549,7 @@
     padding: 2rem;
     background-color: var(--color-light-grey);
   }
-  a:hover {
+  .card-services a:hover {
     color: var(--color-white);
     background-color: var(--color-primary);
     text-decoration: none;
