removed code for testing

--- a/CSS_advanced/styles/24-style.css
+++ b/CSS_advanced/styles/24-style.css
@@ -541,7 +541,9 @@
   .social-link > svg {
     fill: var(--text-color);
   }
- 
+  .card-services .card-title {
+    margin: 0;
+  }
   .card-services a  {
     display: block;
     padding: 2rem;
