--- a/CSS_advanced/styles/27-style.css
+++ b/CSS_advanced/styles/27-style.css
@@ -594,8 +594,8 @@
   .section-hero {
     background-size: 90rem auto;
   }
-  .section-title {
-    margin: 0 0 5rem 0;
+  .section-hero .section-title {
+    margin-bottom: 5rem;
   }
   .section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
