--- a/CSS_advanced/styles/28-style.css
+++ b/CSS_advanced/styles/28-style.css
@@ -614,7 +614,7 @@
     position: var(--header-logo-position);
   }
 
-  .header-logo [href] {
+  .header-logo a[href] {
     display: var(--header-logo-link-display);
     position: var(--header-logo-link-position);
     vertical-align: var(--header-logo-link-top);
