Using top and bottom

--- a/CSS_advanced/styles/28-style.css
+++ b/CSS_advanced/styles/28-style.css
@@ -617,6 +617,6 @@
   .header-logo a {
     display: var(--header-logo-link-display);
     position: var(--header-logo-link-position);
-    
-    
+    top: var(--header-logo-link-top);
+    bottom: var(--header-logo-link-left);
   }
