--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -621,7 +621,7 @@
     left: var(--header-logo-link-left);
   }
   nav .nav-link::before {
-    content: none;
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
