--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -620,7 +620,7 @@
     top: var(--header-logo-link-top);
     left: var(--header-logo-link-left);
   }
-  nav .nav-link::before {
+  .nav .nav-link::before {
     content: "";
     position: absolute;
     top: 0;
@@ -629,7 +629,7 @@
     width: 0;
     height: 0.20rem;
   }
-  nav .nav-item:hover .nav-link::before {
+  .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
   }
