Targetting card-work instead of card-image

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -634,7 +634,7 @@
     width: 100%;
   }
 
-  .card-work .card-image {
+  .card-work .card-work {
     position: relative;
     overflow: hidden;
   }
