Targetting card-outer instead of card-work

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -634,7 +634,7 @@
     width: 100%;
   }
 
-  .card-work .card-work {
+  .card-work .card-outer {
     position: relative;
     overflow: hidden;
   }
