--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -653,7 +653,9 @@
     z-index: 1;
   }
 
-  
+  .card-work:hover .card-inner {
+    background-color: rgba(0, 0, 0, 0.7) ;
+  }
 
   .card-work .card-title {
     text-align: center;
@@ -663,11 +665,7 @@
     position: relative;
   }
 
-  .card-title.card-work {
-    display: block;
-    text-decoration: none;
-    padding-top: 45%;
-  }
+  
 
   .card-title.card-work a::after {
     position: absolute;
