--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -665,7 +665,11 @@
     position: relative;
   }
 
-  
+  .card-title .card-work a {
+    display: block;
+    text-decoration: none;
+    padding-top: 45%;
+  }
 
   .card-title.card-work a::after {
     position: absolute;
