--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -673,7 +673,10 @@
 
   .card-title .card-work a::after {
     position: absolute;
-    position: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
     content: "";
   }
 .card-work:hover .card-title {
