--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -671,7 +671,7 @@
     padding-top: 45%;
   }
 
-  .card-title .card-work a::after {
+  .card-work .card-title a::after {
     position: absolute;
     top: 0;
     right: 0;
