--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -665,7 +665,7 @@
     position: relative;
   }
 
-  .card-title .card-work a {
+  .card-work .card-title a {
     display: block;
     text-decoration: none;
     padding-top: 45%;
