--- a/CSS_advanced/styles/31-style.css
+++ b/CSS_advanced/styles/31-style.css
@@ -684,7 +684,7 @@
 }
 
 .card-testimonial .card-quote {
-    position: relative;
+    position: inherit;
 }
 
 .card-testimonial .card-quote::before {
