--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -717,5 +717,5 @@ card-work:hover .card-image {
     transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 .card-work .card-inner {
-    transition: var(–-transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
