--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -711,7 +711,8 @@
 }
 .button:hover {
     transition-duration: var(--transition-duration);
-    transition-property: color, background-color;
+    transition-property: color;
+    transition-property: background-color;
 }
 card-work:hover .card-image {
     transition: var(--transition-duration) var(--transition-cubic-bezier);
