--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -711,10 +711,9 @@
 }
 .button:hover {
     transition-duration: var(--transition-duration);
-    transition-property: color;
-    transition-property: background-color;
+    transition-property: color, background-color;
 }
-card-work:hover .card-image {
+.card-work:hover .card-image {
     transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 .card-work .card-inner {
